--- a/Survey-Form.html
+++ b/Survey-Form.html
@@ -33,29 +33,18 @@
     <fieldset>
         <label for="radio"> Are you new to the game? 
             <br>
-            Yes <input class="inline" type="radio" name="radio" id="radio-1" value="0"> 
+            <input class="inline" type="radio" name="radio" id="radio-1" value="0"> Yes 
             <br>
-            No <input class="inline" type="radio" name="radio" id="radio-2" value="1"> 
+            <input class="inline" type="radio" name="radio" id="radio-2" value="1"> No 
         </label>
-        <p>What part of the game would you like improved?</p>      
-            <div class="inline">
-                <input  type="checkbox" value="1" name="improve" id="improve-1"> <label class="checkbox-label" for="improve-1">The Menu User Interface.</label>
-            </div>
-                <div class="inline"><input type="checkbox" value="2" name="improve" id="improve-2">
-                    <label class="checkbox-label" for="improve-2">The Heads Up Display.</label>
-                </div>
-                <div class="inline"><input type="checkbox" value="3" name="improve" id="improve-3">
-                    <label class="checkbox-label" for="improve-3">The Difficulty Settings.</label>
-                </div>
-                <div class="inline">
-                    <input type="checkbox" value="4" name="improve" id="improve-4"><label class="checkbox-label" for="improve-4">The Gameplay Mechanics.</label>
-                </div>         
-                <div class="inline">
-                    <input type="checkbox" value="5" name="improve" id="improve-5"><label class="checkbox-label" for="improve-5">The Graphics.</label>
-                </div>
-                <div class="inline"> 
-                    <input type="checkbox" value="6" name="improve" id="improve-6"><label class="checkbox-label" for="improve-6">Nothing :).</label>
-                </div>
+        <p>What part of the game would you like improved?</p>  
+        <div class="checkboxes"></div><label class="inline" for="improve-1"><input  type="checkbox" value="1" name="improve" id="improve-1"> The Menu User Interface.</label></div>
+        <div class="checkboxes"></div><label class="inline" for="improve-2"></label><input type="checkbox" value="2" name="improve" id="improve-2"> The Heads Up Display.</label></div>
+        <div class="checkboxes"></div><label class="inline" for="improve-3"><input type="checkbox" value="3" name="improve" id="improve-3"> The Difficulty Settings.</label></div>
+        <div class="checkboxes"></div><label class="inline" for="improve-4"></label><input type="checkbox" value="4" name="improve" id="improve-4"> The Gameplay Mechanics.</label></div>
+        <div class="checkboxes"></div><label class="inline" for="improve-5"></label><input type="checkbox" value="5" name="improve" id="improve-5"> The Graphics.</label></div>
+        <div class="checkboxes"></div><label class="inline" for="improve-6"></label><input type="checkbox" value="6" name="improve" id="improve-6"> Nothing :).</label></div>
+
         <label for="comment"> Any additional improvements?
             <textarea name="comment" id="comment" cols="30" rows="10" placeholder="I would like more rainbows!"></textarea>
         </label>
