--- a/Survey-Form.html
+++ b/Survey-Form.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <section class="intro">
-    <h1 id="title">My Survey Forum Project</h1>
+    <h1 id="title">My Survey Form Project</h1>
     <p id="description">I am building this survey form to show off what I have learned so far!</p>
 </section>
     <form id="survey-form" method="post">
